Small alignment fix

--- a/blog.css
+++ b/blog.css
@@ -5,10 +5,11 @@ body {
 
 figcaption {
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 blockquote {
-  margin: 0;
+  margin: 1rem;
 }
 
 blockquote p {
